cmake_minimum_required(VERSION 3.18)

project(pntr_app_input_tester
  DESCRIPTION "null0 game engine"
  HOMEPAGE_URL "https://github.com/konsumer/pntr_app_input_tester"
  VERSION 0.0.1
  LANGUAGES C
)

if(POLICY CMP0135)
  cmake_policy(SET CMP0135 NEW)
  set(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
endif()

if(POLICY CMP0077)
  cmake_policy(SET CMP0077 NEW)
  set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
endif()

if(POLICY CMP0169)
  cmake_policy(SET CMP0169 NEW)
  set(CMAKE_POLICY_DEFAULT_CMP0169 NEW)
endif()

# enable colors for ninja
set(CMAKE_COLOR_DIAGNOSTICS ON)

# everyone wants to make an "uninstall" target
set_property(GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1)

include(FetchContent)
# set(FETCHCONTENT_QUIET OFF)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(pntr REQUIRED)
FIND_PACKAGE(pntr_app REQUIRED)

FILE(GLOB SRC_FILES src/*.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pntr pntr_app)

IF (EMSCRIPTEN)
  ADD_COMPILE_DEFINITIONS(PNTR_APP_WEB)
  SET(CMAKE_EXECUTABLE_SUFFIX ".mjs")
  TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE -sFORCE_FILESYSTEM -sEXPORTED_RUNTIME_METHODS=FS,HEAPU8 -sALLOW_MEMORY_GROWTH)
ELSE()
  FIND_PACKAGE(raylib REQUIRED)
  ADD_COMPILE_DEFINITIONS(PNTR_APP_RAYLIB)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib)
ENDIF()